ended main task

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <title>Ticket</title>
 </head>
 <body>
-    <div class="container-fluid border d-flex bg-dark text-white">
+    <div class="container-fluid border d-flex flex-column  bg-dark text-white">
         <div class="container border">
             <p class="row d-flex">
-                <h1>
-                    Prezzo Biglietto in Euro:<span id="price" class=" container fs-2 text-white">  </span><span>
+                <h1 class="text-uppercase bg-warning">
+                    Prezzo Biglietto in Euro:<span id="price" class=" container fs-1 text-white text-uppercase">  </span><span>
                          <i class="fa fa-euro-sign text-white"></i>
                     </span>
 
@@ -28,6 +28,14 @@
 
             </p>
 
+        </div>
+
+        <div class="container-fluid">
+            <div class="w-100">
+                
+
+            </div>
+            
         </div>
 
     </div>
