--- a/Temperatura/index-2.html
+++ b/Temperatura/index-2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- style.css -->
-    <link rel="stylesheet" href="/style-1.css">
+   
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,8 @@
         <div class="container">
             <div class="row col-12 bg-dark text-white text-uppercase">
                 <div  >
-                    <h1>Calcolo Medio: <span id="Average-calculation"></span></h1>
+                    <h1>Temperatura °C: <span id="celsius"></span></h1>
+                    <h1>Temperatura °F: <span id="fahrenheit"></span></h1>
 
 
 
@@ -26,6 +27,7 @@
     </div>
 
 
-    
+ 
+    <script type="text/javascript" src="script-2.js"></script>    
 </body>
 </html>
